--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="container">
         <div class="slider">
-            <img class="slide" src="image1.jpg" alt="Image 1">
-            <img class="slide" src="image2.jpg" alt="Image 2">
-            <img class="slide" src="image3.jpg" alt="Image 3">
+            <img class="slide" src="IMG_3274.jpg" alt="Image 1">
+            <img class="slide" src="IMG_3767.jpg" alt="Image 2">
+            <img class="slide" src="IMG_3791.jpg" alt="Image 3">
         </div>
         <h1>Happy New Year 2023!</h1>
         <p id="message">Even though I'm far away, my warm wishes are with you.</p>
