--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year Greeting with Slider</title>
+    <title>New Year Greeting</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div id="container">
         <div class="slider">
-            <img class="slide" src="IMG_3274.jpg" alt="Image 1">
-            <img class="slide" src="IMG_3767.jpg" alt="Image 2">
-            <img class="slide" src="IMG_3791.jpg" alt="Image 3">
+            <img src="IMG_3274.jpg" alt="Image 1">
+            <img src="IMG_3767.jpg" alt="Image 2">
+            <img src="IMG_3791.jpg" alt="Image 3">
         </div>
         <h1>Happy New Year 2023!</h1>
         <p id="message">Even though I'm far away, my warm wishes are with you.</p>
-        <p id="countdown">Countdown: <span id="timer">Loading...</span></p>
+        <button id="surpriseButton">Click for a Surprise</button>
     </div>
+    <div id="fireworks"></div>
     <script src="script.js"></script>
 </body>
 </html>
