--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year Greeting</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-    <div id="container">
-        <div class="slider">
-            <img src="IMG_3274.jpg" alt="Image 1">
-            <img src="IMG_3767.jpg" alt="Image 2">
-            <img src="IMG_3791.jpg" alt="Image 3">
+    <head>
+        <title>Arth Slider</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <main>
+            <img src="IMG_3274.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_3767.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_3791.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_4378.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+        </main>
+        <div class="nav">
+            <button onclick="goPrev()">Prev</button>
+            <button onclick="goNext()">Next</button>
         </div>
-        <h1>Happy New Year 2023!</h1>
-        <p id="message">Even though I'm far away, my warm wishes are with you.</p>
-        <button id="surpriseButton">Click for a Surprise</button>
-    </div>
-    <div id="fireworks"></div>
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
