--- a/index.html
+++ b/index.html
@@ -3,24 +3,16 @@
     <head>
         <title>Arth Slider</title>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main>
-            <div class="slide">
-                <img src="IMG_3274.jpg" alt="" style="width: 600px; height: 500px;">
-            </div>
-            <div class="slide">
-                <img src="IMG_3767.jpg" alt="" style="width: 600px; height: 500px;">
-            </div>
-            <div class="slide">
-                <img src="IMG_3791.jpg" alt="" style="width: 600px; height: 500px;">
-            </div>
-            <div class="slide">
-                <img src="IMG_4378.jpg" alt="" style="width: 600px; height: 500px;">
-            </div>
+            <img src="IMG_3274.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_3767.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_3791.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
+            <img src="IMG_4378.jpg" class="slide" alt="" style="width: 600px; height: 500px;">
         </main>
         <div class="nav">
             <button onclick="goPrev()">Prev</button>
